 - Disable particles if no GL_Point extensions found (it 
   will fix a segfault at the outdoor map);
 - Ranged options now changeable with a fill bar; 
 - Only draw battle move circle if have move actions;
 - Comic book cutscenes;
 - Barter;
 - Define multitexture as option (improve critically the outdoor rendering at
 old graphic cards, but disable the terrain texture splatting);
 - Fixed sun/moon position;
 - Continuous Walk with Mouse;
 - Calling read-only skills window at character's window;
 - Define sound's interval time before loop;
 - Define sound effects per map;
 - Walls with different textures per side;
 - MapEditor: tool to cut walls (knife);
 - New MiniMap Draw Method;
 - Use of heal items;
 - Fixed a bug at IA Script variable type check;
 - VIM syntax files for DNT Script and Dialog Languages;
 - Skill Checks at Dialogs;
 - Receive XP on killing, trickering and completing missions;
 - Use of Computers;
 - Initial approach to NPC select the target to attack;
 - Initial approach to select better attack to NPC use;
 - Initial approach to move NPC on battle;
 - Implemented GUI tabBox;
 - Use tabBox for Options and Inventories;

Working on:
 - Character level up;
 - Weather effects;
 - Shadows;
 - New Models;
 - Use dntMapEditor to insert sound effects at maps;
 - Initial approach to NPC use other actions than attack actions at combat;
 - Load/Save Functions;
 - New Maps;
 - New Missions;
 - Finish the combat system implementation;

Pending:
 - Define Counter Skills;
 - Minimap Tags;
 - Extend walls to follow map height;
 - Define paths to improve the A* at outdoor maps;
 - Put Lights on MapEditor;
 - Make a tutorial to the battle system;
 - Implement 5-15% of the feats defined on DNT Book;
 - Score at Death Screen;
 - Capacity of using feats;

================================================
|                Version 0.2                   |
================================================
 - Meteors and FireSpheres
 - Indoor Reflections